--- a/index.html
+++ b/index.html
@@ -884,6 +884,7 @@
 
     <main>
         <h1 id="anu-rahul-nandhan-work-portfolio">Anu Rahul Nandhan - work portfolio</h1>
+        <sup>(Also known as Muthu Kumar)</sup>
         <h2 id="websites">Websites</h2>
         <p><a href="https://www.thefeathers.in">theFeathers</a> is a small media and branding name. The site was done in WordPress.</p>
         <img src="thefeathers.JPG" />
